--- a/AssignmentLIV2.tex
+++ b/AssignmentLIV2.tex
@@ -1,6 +1,4 @@
-\documentclass[12pt]{article}
-\usepackage{lingmacros}
-\usepackage{tree-dvips}
+\documentclass[10pt]{article}
 \usepackage{listings}
 \usepackage{fancyref}
 \usepackage{url}
@@ -43,25 +41,20 @@ By 14.4, we have that m(t) is on the form described below.
 We know, that it's an absolute continuous function, and by definition 2.10, 2. case and definition 3.8, and there is an integrable function with respect m(t) which is predictable and therefore adapted to filtration, thus a martingale.
 \begin{equation}
 \begin{split}
-m(t) 	& = \int_0^t {e^{-\int_0^s {r(v) dv}}dB(s) 
-+ e^{-\int_0^t {r(v) dv}}} V(t)
+m(t) 	& = \int_0^t {e^{-\int_0^s {r(v) dv}}dB(s)  + e^{-\int_0^t {r(v) dv}}} V(t)
 \end{split}
 \end{equation}
 Use that $(a+b)^2 = 2ab + a^2 + b^2$ and $a^m * a^n = a^{m+n}$
 \begin{equation}
 \begin{split}
-m^{(2)}(t) 	& = (\int_0^t {e^{-\int_0^s {r(v) dv}}dB(s) 
-+ e^{-\int_0^t {r(v) dv}}} V(t))^2 \\
- 		& = \\
-& 2 \int_0^t {e^{-\int_0^s {r(v) dv}}dB(s) e^{-\int_0^t {r(v) dv}}} V(t) \\
+m^{(2)}(t) & = (\int_0^t {e^{-\int_0^s {r(v) dv}}dB(s)  +  e^{-\int_0^t {r(v) dv}}} V(t))^2 \\
+ 		& =  2 \int_0^t {e^{-\int_0^s {r(v) dv}}dB(s) e^{-\int_0^t {r(v) dv}}} V(t) \\
 & + (\int_0^t {e^{-\int_0^s {r(v) dv}}dB(s)})^2 \\
 & + (e^{-\int_0^t {r(v) dv}} V(t))^2  \\
- 		& = \\
-& 2 \int_0^t {e^{-\int_0^s {r(v) dv}}dB(s) e^{-\int_0^t {r(v) dv}}} V(t) \\
+ 		& = 2 \int_0^t {e^{-\int_0^s {r(v) dv}}dB(s) e^{-\int_0^t {r(v) dv}}} V(t) \\
 & + (\int_0^t {e^{-\int_0^s {r(v) dv}}dB(s)})^2 \\
 & + e^{-\int_0^t {r(v) dv}} e^{-\int_0^t {r(v) dv}} (V(t) V(t)) \\
- 		& = \\
-& 2 \int_0^t {e^{-\int_0^s {r(v) dv}}dB(s) e^{-\int_0^t {r(v) dv}}} V(t) \\
+ 		& = 2 \int_0^t {e^{-\int_0^s {r(v) dv}}dB(s) e^{-\int_0^t {r(v) dv}}} V(t) \\
 & + (\int_0^t {e^{-\int_0^s {r(v) dv}}dB(s)})^2 \\
 & + e^{-2\int_0^t {r(v) dv}} V^2(t)
 \end{split}
@@ -77,7 +70,7 @@ m^{(2)}(t) =
 \end{split}
 \end{equation}
 
-Divide the above equation in three, and solve the equations with integration by parts. Use that $\int_0^t e^{-\int_0^s} a(s)$ can be written as $e^{-\int_0^t} \int_0^t a(s)$, $e^{-\int_0^t} (\int_0^{t-} a(s) + \int_{t-}^t a(s))$ and $\int_{t-}^t a(s) = a(t) - a(t-) = \triangle a(t)$
+Divide the above equation in three, and solve the equations with integration by parts $d(f(t)g(t)) = df(t)g(t) + f(t-)dg(t)$. Use that $\int_0^t e^{-\int_0^s} a(s)$ can be written as $e^{-\int_0^t} \int_0^t a(s)$, $e^{-\int_0^t} (\int_0^{t-} a(s) + \int_{t-}^t a(s))$ and $\int_{t-}^t a(s) = a(t) - a(t-) = \triangle a(t)$
 \begin{equation}
 \begin{split}
 d(2 \int_0^t {e^{-\int_0^s {r(v) dv}}dB(s) e^{-\int_0^t {r(v) dv}}} V(t)) \\
@@ -106,7 +99,7 @@ d(e^{-2\int_0^t {r(v) dv}} V^{(2)}(t)) \\
 \end{split}
 \end{equation}
 
-change $t-$ to $t$ for the dt part and merging all the equations which leads us to the result below.
+change $t-$ to $t$ for the dt part and merge all the equations which leads us to the result below.
 \begin{equation}
 \begin{split}
 dm^{(2)}(t) = 2e^{-\int_0^t {r(v) dv}}dB(t)e^{-\int_0^t {r(v) dv}}V(t) \\
@@ -145,7 +138,7 @@ e^{2\int_0^t r(v)dv}dm^2(t) & = \\
 & + 2(\int_0^{t-} {e^{-\int_0^s {r(v) dv}}dB(s)}) e^{\int_0^t r(v)dv} (dB(t) + dV(t) - r(t)V(t)dt)
 \end{split}
 \end{equation}
-Note that $\triangle B(t) = \sum_k b^{Z(t-)k}(t)\triangle N^k(t)$ and that $\triangle N^k(t) * b^{Z(t)}(t)$ is zero, because N only counts 1, if in state $k \neq j$. Use that $\sum_k b^{Z(t-)k}(t) = \sum_j \sum_{k \neq j} b^{jk}(t)$. Use that $V^{Z(t)} = V^k$ when $dN^k(t)$
+Note that $\triangle B(t) = \sum_k b^{Z(t-)k}(t)\triangle N^k(t)$ and that $\triangle N^k(t) * b^{Z(t)}(t)$ is zero, because N only counts 1, if in state $k \neq j$. Use that $\sum_k b^{Z(t-)k}(t) = \sum_j \sum_{k \neq j} b^{jk}(t)$. Use that $V^{Z(t)} = V^k$ when $dN^k(t)$, due to the assumption that we can only be in one state at a time.
 \begin{equation}
 \begin{split}
 (\triangle B(t) + 2V(t))dB(t) & = \\
@@ -155,7 +148,7 @@ Note that $\triangle B(t) = \sum_k b^{Z(t-)k}(t)\triangle N^k(t)$ and that $\tri
 & = \\
 & \sum_j 1_{\{Z(t-)=j\}} (2V^j(t)b^{j}(t)dt + \sum_{k \neq j} (b^{jk}(t) + 2V^k(t))b^{jk}(t)dN^k(t)) \\
 & = \\
-& 2 \sum_j 1_{\{Z(t-)=j\}} V^j(t)b^{j}(t)dt + \sum_{k} (b^{Z(t-)}(t) + 2V^k(t))b^{Z(t-)}(t)dN^k(t))
+& 2 \sum_j 1_{\{Z(t-)=j\}} V^j(t)b^{j}(t)dt + \sum_{k} (b^{Z(t-)k}(t) + 2V^k(t))b^{Z(t-)k}(t)dN^k(t))
 \end{split}
 \end{equation}
 Insert into the equation before.
@@ -163,89 +156,114 @@ Insert into the equation before.
 \begin{split}
 e^{2\int_0^t r(v)dv}dm^2(t) & = \\
 & + dV^2(t) \\
-& - 2 r(t) V^2(t) \\
-& + 2 \sum_j 1_{\{Z(t-)=j\}} V^j(t)b^{j}(t)dt + \sum_{k} (b^{Z(t-)}(t) + 2V^k(t))b^{Z(t-)}(t)dN^k(t)) \\
+& - 2 r(t) V^2(t)dt \\
+& + 2 \sum_j 1_{\{Z(t-)=j\}} V^j(t)b^{j}(t)dt + \sum_{k} (b^{Z(t-)k}(t) + 2V^k(t))b^{Z(t-)k}(t)dN^k(t)) \\
 & + 2(\int_0^{t-} {e^{-\int_0^s {r(v) dv}}dB(s)}) e^{\int_0^t r(v)dv} (dB(t) + dV(t) - r(t)V(t)dt)
 \end{split}
 \end{equation}
 
 \newpage
 
+\subsection{Question 1.D}
+Assume $V^{(2)}(t)$ has an intensity function $\lambda^{(2)}(t)$. Show that
+
+\begin{equation}
+\begin{split}
+\lambda^{(2)}(t) + \sum_j 1_{\{Z(t-) = j\}}(2V^j(t)b^j(t) + \sum_{k \neq j}(b^{jk}(t) + 2V^k(2))b^{jk}(t)\mu^{jk}(t)) = 2r(t)V^{(2)}(t)
+\end{split}
+\end{equation}
+The right-handside of 1.C is a martingale known from 14.4. For the third part on the left-handside of 1.C, we have $\int_0^{t-} {e^{-\int_0^s {r(v) dv}}dB(s)}) e^{\int_0^t r(v)dv} (dB(t) + dV(t) - r(t)V(t)dt)$, $dB(t) + dV(t) - r(t)V(t)dt$ is martingale known from 14.4/14.5. Taking a function on it keeps it a martingale. The part $\int_0^{t-} {e^{-\int_0^s {r(v) dv}}dB(s)} $ is left-continuous, hence predictable.  Subtract a martingale on both sides of the equality sign, sets the right-handside to zero, and removes the third part on the left-handside.
+\begin{equation}
+\begin{split}
+0 & = dV^2(t) \\
+& - 2 r(t) V^2(t)dt \\
+& + 2 \sum_j 1_{\{Z(t-)=j\}} V^j(t)b^{j}(t)dt + \sum_{k} (b^{Z(t-)k}(t) + 2V^k(t))b^{Z(t-)k}(t)\sum_{k\neq j} \mu^{jk}(t)1_{\{Z(t-)=j\}}) \\
+\end{split}
+\end{equation}
+Now use the assumption $V^{(2)}(t)$ has an intensity function $\lambda^{(2)}(t)$ and by definition 9.14, we have that $\lambda^{(2)}(t)dt = dV^{(2)}(t) = \int_0^t \lambda^{(2)}(s)ds = \Lambda^{(2)}(t)$.
+\begin{equation}
+\begin{split}
+0 & = \Lambda^2(t) \\
+& - 2 r(t) V^2(t)dt \\
+& + 2 \sum_j 1_{\{Z(t-)=j\}} V^j(t)b^{j}(t)dt + \sum_{k} (b^{Z(t-)k}(t) + 2V^k(t))b^{Z(t-)k}(t)\sum_{k\neq j} \mu^{jk}(t)1_{\{Z(t-)=j\}}) \\
+\end{split}
+\end{equation}
+
+Furthermore we know that in $\sum_{k} (b^{Z(t-)k}(t) + 2V^k(t))b^{Z(t-)k}(t)dN^k(t)) $ we have $dN^k(t)$ with an intensity process by proposition 12.9 $\sum_{k\neq j} \mu^{jk}(t)1_{\{Z(t-)=j\}}$.
+Use that information and solve the equation to something similar to 14.5.
+\begin{equation}
+\begin{split}
+0 & =  \Lambda^2(t) - 2 r(t) V^2(t)dt \\
+& + 2 \sum_j 1_{\{Z(t-)=j\}} V^j(t)b^{j}(t)dt + \sum_j (\sum_{k\neq j}1_{\{Z(t-)=j\}} (b^{jk}(t) + 2V^k(t))\sum_{k\neq j} \mu^{jk}(t)b^{jk}(t)1_{\{Z(t-)=j\}})) \\
+& = \Lambda^2(t) - 2 r(t) V^2(t)dt \\
+& + \sum_j 1_{\{Z(t-)=j\}} (2V^j(t)b^{j}(t)dt + \sum_{k\neq j} (b^{jk}(t) + 2V^k(t)) \mu^{jk}(t)b^{jk}(t))) \\
+\end{split}
+\end{equation}
+\begin{equation}
+\begin{split}
+2 r(t) V^2(t)dt  =  \Lambda^2(t) + \sum_j 1_{\{Z(t-)=j\}} (2V^j(t)b^{j}(t)dt + \sum_{k\neq j} (b^{jk}(t) + 2V^k(t)) \mu^{jk}(t)b^{jk}(t))) \\
+\end{split}
+\end{equation}
+
 \subsection{Question 1.E}
 By proposition 16.4, page. 55.
 \begin{equation}
 \begin{split}
-V_j^{(2)}(t) & = (2r(t)+\mu(t))V_j^{(2)}(t) - 2b^j(t)V_j(t)-\sum_{k\neq j}\mu^{jk}(t)\sum_{p=0}^2\binom{2}{p}(b^{jk(2)}(t)V^{k(2-p)}(t)) \\
-& = 2r(t)V_j^{(2)}(t) - 2b^j(t)V_j(t)-\sum_{k\neq j}\mu^{jk}(t)(b^{jk(2)}(t) + b^{jk}(t)V^{k}(t) + V^{k(2)}(t) - V_j^{(2)}(t)) 
+V_j^{(2)}(t) & = (2r(t)+\mu(t))V_j^{(2)}(t) - 2b^j(t)V_j(t) \\
+& -\sum_{k\neq j}\mu^{jk}(t)\sum_{p=0}^2\binom{2}{p}(b^{jk(2)}(t)V^{k(2-p)}(t)) \\
+& = 2r(t)V_j^{(2)}(t) - 2b^j(t)V_j(t) \\
+& -\sum_{k\neq j}\mu^{jk}(t)(b^{jk(2)}(t) + b^{jk}(t)V^{k}(t) + V^{k(2)}(t) - V_j^{(2)}(t)) 
 \end{split}
 \end{equation}
 
 \newpage
 
 \subsection{Question 1.F}
-
-\begin{equation}
-\begin{split}
-Var_j(t) & = V_j^{(2)}(t) - (V_j(t))^2
-\end{split}
-\end{equation}
-
+By Theorem 16.2, page 53. 
 \begin{equation}
 \begin{split}
 dV_j(t) = r(t)V_j(t) - b^j(t) - \sum_{k \neq j} \mu^{jk}(t) (b^{jk}(t) + V^k(t) - V^j(t))
 \end{split}
 \end{equation}
-
+By the assignment.
 \begin{equation}
 \begin{split}
 dV_j^{(2)}(t) & = 
- 2r(t)V_j^{(2)}(t) - 2b^j(t)V^j(t) - \sum_{k \neq j} \mu^{jk}(t) (b^{jk(2)}(t) + 2b^{jk}V^k(t) + V^{k(2)}(t) - V^{j(2)}(t)) \\ 
-& = (2r(t)+\mu(t))V_j^{(2)}(t) - 2b^j(t)V^j(t) - \sum_{k \neq j} \mu^{jk}(t) (b^{jk(2)}(t) + 2b^{jk}V^k(t) + V^{k(2)}(t)(t)) 
+ 2r(t)V_j^{(2)}(t) - 2b^j(t)V^j(t) \\
+ & - \sum_{k \neq j} \mu^{jk}(t) (b^{jk(2)}(t) + 2b^{jk}V^k(t) + V^{k(2)}(t) - V^{j(2)}(t)) \\ 
 \end{split}
 \end{equation}
-
+By the assignment $R^{jk}(t) = b_j(t) + V^k - V^j$. And using $(a+b-c)^2 = a^2 + b^2 - c^2 + 2ab -2ac - 2bc$ We get $R^{jk(2)}(t)$ as
 \begin{equation}
 \begin{split}
 R^{jk(2)}(t) = b^{jk(2)}(t) + V^{k(2)}(t) - V^{j(2)}(t) + 2b^{jk}V^k - 2b^{jk}V^j - 2V^kV^j
 \end{split}
 \end{equation}
-
 \begin{equation}
 \begin{split}
-(-2) V_j(t)dV_j(t) & = \\
-& (-2) V_j(t) (r(t)V_j(t) - b^j(t) - \sum_{k \neq j} \mu^{jk}(t) (b^{jk}(t) + V^k(t) - V^j(t))) \\
-& = (-2r(t)-\mu(t))V_{j(2)}(t) + 2b^j(t)V_j(t) \\
-& - \sum_{k \neq j} \mu^{jk}(t) (-2b^{jk}(t)V^j(t) - 2V^k(t)V^j(t))-V_{j(2)}(t))
+Var_j(t) & = V_j^{(2)}(t) - (V_j(t))^2
 \end{split}
 \end{equation}
-
-Search and replace variance and $R^{jk(2)}$. See that $V^{k(2)}(t) - (V^j(t))^2$ can be seen as $V^{k(2)}(t) - (V^k(t))^2 = var_k(t)$
+Solve the equation and use $R = b_j(t) + V^k(t) - V^j(t)$ and $2V^j(t) = (2b_j (t) + 2V^k(t) - 2b_j (t) - 2V^(t) + 2V^j(t) $
 \begin{equation}
 \begin{split}
 dVar_j(t) 	& = d(V_j^{(2)}(t) - (V_j(t))^2) \\
 			& = dV_j^{(2)}(t) - 2V_j(t)dV_j(t) \\
-			\\
-			& = \\
-			& 2r(t)(V^{j(2)(t)}-(V_j(t))^2) \\
-			& - \sum_{k \neq j} \mu^{jk}(t) ( b^{jk(2)}(t) \\ 
-			& + V^{k(2)}(t) - V^{j(2)}(t) - 2V^j(t)V^k(t) - 2(V^j(t))^2+2b^{jk}(V^k(t) - V^j(t)) ) \\
-			& = \\
-			& (2r(t) + \mu(t))var_j(t) \\
-			& - \sum_{k \neq j} \mu^{jk}(t) ( b^{jk(2)}(t) \\ 
-			& + V^{k(2)}(t) - 2V^j(t)V^k(t) - (V^j(t))^2+2b^{jk}(V^k(t) - V^j(t)) ) \\
-			& = \\
-			& (2r(t) + \mu(t))var_j(t) \\
-			& - \sum_{k \neq j} \mu^{jk}(t) ( b^{jk(2)}(t) \\ 
-			& + var_k(t) - 2V^j(t)V^k(t) + 2b^{jk}(V^k(t) - V^j(t)) ) \\
-			& = \\
-			& (2r(t) + \mu(t))var_j(t) - \sum_{k \neq j} \mu^{jk}(t) ( R^{jk(2)}(t) + var_k(t) ) \\
-			& = \\
-			& 2r(t)var_j(t) - \sum_{k \neq j} \mu^{jk}(t) ( R^{jk(2)}(t) + var_k(t) - var_j(t) )
+			& = dV_j^{(2)}(t) - 2V_j(t) (r(t)V_j(t) - b^j(t) - \sum_{k \neq j} \mu^{jk}(t) (b^{jk}(t) + V^k(t) - V^j(t))) \\
+			& = dV_j^{(2)}(t) - (2r(t)(V_j(t)) ^2 -2 b^j(t)V^j(t) \\ 
+			& - \sum_{k \neq j} \mu^{jk}(t) (2(b_ {jk}(t)^2 - b_ {jk}(t)^2) + 4b_ {jk}(t)(V^k(t) - V^k(t)) \\
+			& + 2b_ {jk}(t)(2V^j(t) - V^j(t)) + 2(V^{k}(t)^2 - V^{k}(t)^2) - 2V^{j}(t)^2) \\
+			& = (2r(t)(V_j^{(2)}(t) - (V_j(t)) ^2) \\ 
+			& - \sum_{k \neq j} \mu^{jk}(t) (-2(b_ {jk}(t)^2 - b_ {jk}(t)^2) - 4b_ {jk}(t)(V^k(t) - V^k(t)) \\
+			& - 2b_ {jk}(t)(2V^j(t) - V^j(t)) - 2(V^{k}(t)^2 - V^{k}(t)^2) \\
+			& + 2V^{j}(t)^2 - 2(2V^k(t)V^j(t) - V^k(t)V^j(t))) + b^{jk(2)}(t) + V^{k(2)}(t) - V^{j(2)}(t) ) \\
+			& = 2r(t)Var^{j}(t) - \sum_{k \neq j} \mu^{jk}(t) (-2(b_ {jk}(t)^2 - b_ {jk}(t)^2) - 4b_ {jk}(t)(V^k(t) - V^k(t)) \\
+			& - 2b_ {jk}(t)(V^j(t) - V^j(t)) - V^{k}(t)^2 + V^{k}(t)^2 - 2(V^k(t)V^j(t) - V^k(t)V^j(t))) \\
+			& + R^{jk(2)}(t) + Var^{k}(t) - Var^{j}(t) ) \\
+			& = 2r(t)Var^{j}(t)  - \sum_{k \neq j} \mu^{jk}(t)(R^{jk(2)}(t) + Var^{k}(t) - Var^{j}(t))
 \end{split}
 \end{equation}
-
-We see, that the equation looks like Thiele and conclude, we just replace $var$ and $R^2$ with the original $v$ and $R$ 
-
+We see, that the equation above looks like Thiele and conclude, that we  can use Norberg 7.43, page 81, saying that $V_j(t) = \int_t^n e^{-\int_t^s(r(v)dv)}\sum_k p_{jk}(t,s (dB(s) + \sum_{k \neq l} b_{kl}(s)\mu_{kl}(s)ds)$ just replace $b_{kl}$ with $R^2$  and observe that $dB(s) = 0$. and $r(s)ds$ is multiplied by two in the equation above.
 \begin{equation}
 \begin{split}
 var_j(t) = \int_t^n {e^{-\int_t^s{2r(v)dv}} \sum_k p^{jk}(t,s)\sum_{k\neq l} \mu^{kl}(s)(R^{kl})^2(s)ds}
@@ -323,92 +341,6 @@ g^0(t) = \int_t^n e^{-\int_t^s(q^0(v) + \mu^{01}(v))dv} q^0(s)ds
 \end{equation}
 
 Where $q^j(t)$ $0 <= q^{jk}(t) < 1$
-
-\newpage
-
-\section{Appendix}
-
-\subsection{Appendix - Question 2.A}
-\subsection{Question 2.A}
-By page 60. Contribution function is on the following form. And by page 63, we have differential equations for $f^j(t)$ and $g^j(t)$
-\begin{equation}
-\begin{split}
-c_j(t) & = (r(t)-r^*(t))V_j^*(t) + \sum_{k\neq j}(b^{jk}(t)+V^{*k}(t) - V^{j*}(t)) \\
-c_{jk}(t) & = -(b^{jk}(t) + V^{k*}(t) - V^{j*}(t)) \\ \\
-df^j(t) & = r(t)f^j(t) - b^j(t) - g^j(t)c_j(t) 
-\\ & - \sum_{k\neq j} \mu^{jk}(t) (bj^{jk}(t) + c^{jk}(t)g^k(t) + f^k(t) - f^j(t)) \\
-\end{split}
-\end{equation}
-
-\subsection{Appendix - Question 1.B}
-Use integration by parts, and use, that $\triangle m(t) = m(t) - m(t-)$, and $m(t) = \triangle m(t) + m(t-)$
-\begin{equation}
-\begin{split}
-dm(t) & = e^{-\int_0^t r(v)dv}(dB(t) + dV(t) - r(t)V(t)dt) \\
-dm^2(t) & = d(m(t)m(t)) \\
-		& = dm(t)m(t) + m(t-)dm(t) \\
-		& = dm(t)(m(t) + m(t-)) \\
-		& = dm(t)(\triangle m(t) + 2 m(t-))
-\end{split}
-\end{equation}
-
-Split $m(t)$ in $B^"(t) = \int_0^t e^{-\int_0^s {r(v) dv}}dB(s)$ and 
-$V^"(t) = e^{-\int_0^t {r(v) dv}} V(t)$. Now solve $dm(t) \triangle m(t)$ and $dm(t) 2B^"(t-)$ and $dm(t) 2V^"(t-)$, where $dm(t)$
-
-\begin{equation}
-\begin{split}
-dm(t) 2B^"(t-) & = e^{-\int_0^t r(v)dv}(dB(t) + dV(t) - r(t)V(t)dt) 2\int_0^{t-} e^{-\int_0^s {r(v) dv}}dB(s)
-\end{split}
-\end{equation}
-See that $dm^2(t) = 2 \int_0^t m(s)dm(s)$ and $dV^2(t) = 2 V(t)dV(t)$
-
-\begin{equation}
-\begin{split}
-dm(t) 2V^"(t-) 	& = e^{-\int_0^t r(v)dv}(dB(t) + dV(t) - r(t)V(t)) 2e^{-\int_0^t {r(v) dv}} V(t) \\
-				& = 2 e^{-2\int_0^t r(v)dv} V(t) (dB(t) + dV(t) - r(t)V(t)dt) \\
-				& = 2 e^{-2\int_0^t r(v)dv} (V(t)dB(t) - r(t)V^2(t)) + e^{-2\int_0^t r(v)dv}dV^2(t)
-\end{split}
-\end{equation}
-See that $V^"(t) - V^"(t-) = 0$ And see that $B^"(t) - B^"(t-) = \int_0^t e^{-\int_0^s{r(v)dv}} dB(s) - dB(s-) = e^{-\int_0^t{r(v)dv}} \int_0^t dB(t) - dB(t-) = e^{-\int_0^t{r(v)dv}}  \triangle B(t)$ And no jump payments in $dV(t)$ or $V(t)$
-\begin{equation}
-\begin{split}
-dm(t) \triangle m(t) 	& = (e^{-\int_0^t r(v)dv}(dB(t) + dV(t) - r(t)V(t)dt)) (B^"(t)+V^"(t) - B^"(t-)-V^"(t-))	\\
-						& = (e^{-\int_0^t r(v)dv}(dB(t)) e^{-\int_0^t{r(v)dv}}  \triangle B(t) \\
-& = e^{-2\int_0^t r(v)dv}dB(t)  \triangle B(t)				
-\end{split}
-\end{equation}
-And see that $r(t)V(t)dt$ is continuous therefore we can exchange $t-$ with $t$.
-\begin{equation}
-\begin{split}
-dm^2(t) & = \\ 
-& = dm(t)B^"(t) + dm(t)V^"(t) + dm(t)\triangle m(t) \\
-& e^{-\int_0^t r(v)dv}(dB(t) + dV(t) - r(t)V(t)dt) 2\int_0^{t-} e^{-\int_0^s {r(v) dv}}dB(s) \\
-& + 2 e^{-2\int_0^t r(v)dv} (V(t)dB(t) - r(t)V^2(t)) + e^{-2\int_0^t r(v)dv}dV^2(t) \\
-& + e^{-2\int_0^t r(v)dv}dB(t)  \triangle B(t) \\	
-& = \\ 
-& 2(\int_0^{t-} e^{-\int_0^s {r(v) dv}}dB(s))e^{-\int_0^t r(v)dv}dB(t) \\
-& + e^{-2\int_0^t r(v)dv} \triangle B(t)dB(t) \\
-& - 2e^{-2\int_0^t r(v)dv} r(t) V^2(t) \\
-& + e^{-2\int_0^t r(v)dv} dV^2(t) \\
-& + 2e^{-2\int_0^t r(v)dv} V(t)dB(t) \\
-& -2(\int_0^{t-} e^{-\int_0^s {r(v) dv}}dB(s))e^{-\int_0^t r(v)dv}r(t)V(t)dt \\
-& + 2(\int_0^{t-} e^{-\int_0^s {r(v) dv}}dB(s))e^{-\int_0^t r(v)dv}dV(t) 		
-\end{split}
-\end{equation}
-
-\subsection{Appendix - Question 1.C}
-\begin{equation}
-\begin{split}
-dm^2(t) & = \\
-& + 2(\int_0^{t-} e^{-\int_0^s {r(v) dv}}dB(s))e^{-\int_0^t r(v)dv}dB(t) \\
-& + e^{-2\int_0^t r(v)dv} \triangle B(t)dB(t) \\
-& - 2e^{-2\int_0^t r(v)dv} r(t) V^2(t)dt \\
-& + e^{-2\int_0^t r(v)dv} dV^2(t) \\
-& + 2e^{-2\int_0^t r(v)dv} V(t)dB(t) \\
-& -2(\int_0^{t} e^{-\int_0^s {r(v) dv}}dB(s))e^{-\int_0^t r(v)dv}r(t)V(t) \\
-& + 2(\int_0^{t-} e^{-\int_0^s {r(v) dv}}dB(s))e^{-\int_0^t r(v)dv}dV(t) 
-\end{split}
-\end{equation}
 
 \newpage
 
